2004-11-14  Erik Hjortsberg  <erik@katastrof.nu>

	* Implemented Wield and Use operations. Though they don't seem to work at the moment.
	* Rearranged headers to prevent linking errors.
	* Added options to ember.conf to set the amount of foliage. 

2004-11-14  Erik Hjortsberg  <erik@katastrof.nu>

	* fix stupid segfault on exit

2004-11-14  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixed bug with segfault when trying to connect with an empty server list.

2004-11-13  Erik Hjortsberg  <erik@katastrof.nu>

	* removed obsolete files

2004-11-13  Erik Hjortsberg  <erik@katastrof.nu>

	* Removed some bugs which in various ways stopped the main loop.
	* Finalized on a resource structure.
	* Tried to arrange the inludes in a way that made it easy to compile Ember in debug mode without getting bit by the special debug Ogre memory manager. It's not 100% though. For now, change OgreConfig.h, set OGRE_DEBUG_MEMORY_MANAGER  to 0.
	* Fixed a bug which made Ember not release the mouse upon exit.
	* Changed the gui to use png images instead of tga, since apparently some machines can't load the tga in a correct way.

2004-11-13  Erik Hjortsberg  <erik@katastrof.nu>

	* Added fix for compilation problem with debug mode and memory managers.

2004-11-13  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixed dev-model definition which by mistake made it into cvs.

2004-11-13  Erik Hjortsberg  <erik@katastrof.nu>

	* Install more data files in distribution.

2004-11-13  Erik Hjortsberg  <erik@katastrof.nu>

	* Changed modeldefintions. Use "Action" instead of "Animation" because an action can contain more than just animations, sounds for example.
	* Fixed wrong references to Ogre::TerrainSceneManager
	* Changed location of config and media files.

2004-11-12  Erik Hjortsberg  <erik@katastrof.nu>

	* Added EmberTerrainSceneManager, which removes the need to link to Ogre's TerrainSceneManager.

2004-11-12  Erik Hjortsberg  <erik@katastrof.nu>
