@@ -1,25 +1,32 @@
 <?xml version="1.0" ?> 
- <GUILayout> 
-    <Window Type="TaharezLook/FrameWindow" Name="DebugMainWindow"> 
-       <Property Name="Position" Value="x:0.25 y:0.25" /> 
-       <Property Name="Size" Value="w:0.5 h:0.5" /> 
-       <Property Name="Text" Value="Debug window" /> 
- 
- 			<Window Type="TaharezLook/StaticText" Name="statxtCurrentFPS">
-				<Property Name="Text" Value="CurrentFps: " /> 
-		       <Property Name="Position" Value="x:0.25 y:0.25" /> 
-		       <Property Name="Size" Value="w:0.5 h:0.5" /> 
-				
- 			</Window>
+<GUILayout> 
 
- 			
- 			
-          <Window Type="TaharezLook/Button" Name="QuitButton"> 
-             <Property Name="Position" Value="x:0.075 y:0.1" /> 
-             <Property Name="Size" Value="w:0.15 h:0.75" /> 
-             <Property Name="Text" Value="Quit!" /> 
-             <Property Name="Alpha" Value="0.75" /> 
-          </Window> 
- 
-    </Window> 
+	<Window Type="TaharezLook/FrameWindow" Name="MainWindow">
+		<Property Name="Position" Value="x:0 y:0.3" /> 
+		<Property Name="Size" Value="w:0.3 h:0.2" /> 
+		<Property Name="Alpha" Value="0.6" /> 
+		<Property Name="Text" Value="Eris log" />
+		<Window Type="DefaultGUISheet" Name="MainInnerWindow">
+			<Property Name="Position" Value="x:0 y:0.1" /> 
+			<Property Name="Size" Value="w:0.96 h:0.7" /> 
+			<Property Name="InheritsAlpha" Value="True" /> 
+		
+			<Window Type="TaharezLook/MultiLineEditbox" Name="TextBox">
+				<Property Name="Position" Value="x:0 y:0.15" /> 
+				<Property Name="Size" Value="w:1 h:0.8" /> 
+				<Property Name="Text" Value="" /> 
+				<Property Name="InheritsAlpha" Value="True" /> 
+				<Property Name="Alpha" Value="0.6" /> 
+				<Property Name="ReadOnly" Value="true" /> 
+			</Window>
+			<Window Type="TaharezLook/Combobox" Name="LogLevelDropList">
+				<Property Name="Position" Value="x:0 y:0" /> 
+				<Property Name="Size" Value="w:1 h:0.15" /> 
+				<Property Name="InheritsAlpha" Value="False" /> 
+				<Property Name="ReadOnly" Value="true" /> 
+				<Property Name="Text" Value="Loglevel" /> 
+			</Window>
+			
+		</Window>
+	</Window>
  </GUILayout> 
